--- a/source/articles/2014-01-14-math.markdown
+++ b/source/articles/2014-01-14-math.markdown
@@ -2,6 +2,7 @@
 title: Math Is Not Necessary for Software Development
 date: 2014-01-14
 layout: post
+cover: math.jpg
 ---
 ### As a developer, written communication and reading comprehension are more valuable than math proficiency.
 
